force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <pluralLabel>Visits</pluralLabel>
    <nameField>
        <displayFormat>VIS-{0000}</displayFormat>
        <label>Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Retailer__c</fullName>
        <label>Retailer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckIn__c</fullName>
        <label>Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOut__c</fullName>
        <label>Check Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ComplianceScore__c</fullName>
        <label>Compliance Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restrictedPicklist>true</restrictedPicklist>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignatureId__c</fullName>
        <label>Signature ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>