force-app/main/default/objects/Visit__c/fields/CheckIn__c.field-meta.xml
<CustomField>
    <fullName>CheckIn__c</fullName>
    <label>Check In</label>
    <type>DateTime</type>
</CustomField>