force-app/main/default/objects/Visit__c/fields/CheckOut__c.field-meta.xml
<CustomField>
    <fullName>CheckOut__c</fullName>
    <label>Check Out</label>
    <type>DateTime</type>
</CustomField>