force-app/main/default/objects/Visit__c/fields/ComplianceScore__c.field-meta.xml
<CustomField>
    <fullName>ComplianceScore__c</fullName>
    <label>ComplianceScore</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>