force-app/main/default/objects/Visit__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>