force-app/main/default/objects/Visit__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>