force-app/main/default/objects/Visit__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <label>Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>