force-app/main/default/objects/Visit__c/fields/SignatureId__c.field-meta.xml
<CustomField>
    <fullName>SignatureId__c</fullName>
    <label>SignatureId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>